Set hero image banner to 100% width (fixed text positioning bug on Safari).

--- a/themes/catalyst/sass/_globals.scss
+++ b/themes/catalyst/sass/_globals.scss
@@ -15,7 +15,7 @@
 }
 
 .hero-image-banner {
-	width: 100vw;
+	width: 100%;
 }
 
 .formulas:last-child {
